--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,12 @@ header a:hover {
 }
 .nav-logo {
   float: left;
+  margin-top: 20px;
+}
+.nav-name {
+  /* float: left; */
+  margin-left: 20px;
+  /* margin-top: 20px; */
 }
 .nav-link {
   float: right;
